@@ -1,3 +1,10 @@
+2012-05-21  Joseph Myers  <joseph@codesourcery.com>
+
+	PR c/53418
+	* c-typeck.c (build_conditional_expr): Remove C_MAYBE_CONST_EXPR
+	from folded operands before wrapping another around the
+	conditional expression.
+
 2012-05-21  Dave Boutcher  <daveboutcher@gmail.com>
 	    Patrick Marlier  <patrick.marlier@gmail.com>
 
